# stockscan

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  MCP_SERVER.md  MIGRATION.md  Makefile  README.md  TODO.md  USER_STORIES.md  claude_desktop_config.example.json  docker-compose.override.example.yml  docker-compose.yml  market_regime_detection.md  pyproject.toml  tailwind.config.js
infra/: crontab  docker-compose.yml  setup_db.sh
infra/launchd/: INSTALL.md  com.stockscan.db-backup.plist  com.stockscan.nightly-scan.plist  com.stockscan.web.plist
infra/scripts/: db_backup.sh  db_backup_compose.sh  migration_dump.sh  migration_restore.sh
migrations/: 0001_initial_schema.sql  0002_backtest_tables.sql  0003_watchlist.sql  0004_technical_scores.sql  0005_fundamentals.sql  0006_backtest_r_multiple.sql  0007_backtest_trade_context.sql  0008_market_regime.sql  0009_news.sql  0010_regime_composite.sql  0011_regime_intermediate_signals.sql  0012_paper_trades.sql  0013_signals_dedup.sql  0014_fundamentals_widen_ratios.sql  0015_drop_technical_scores.sql  0016_drop_strategy_configs.sql  0017_economic_events.sql  0018_earnings_trends.sql  0019_insider_transactions.sql  0020_watchlist_lists.sql  0021_refresh_log.sql  0022_option_proposals.sql
models/donchian_trend/: donchian_trend_20260430T203404.pkl  donchian_trend_20260501T175645.pkl  donchian_trend_20260506T013912.pkl  latest.pkl
models/momentum_52w_high/: momentum_52w_high_20260501T152045.pkl
models/rsi2_meanrev/: rsi2_meanrev_20260501T071120.pkl
src/stockscan/: __init__.py  __main__.py  cli.py  config.py  db.py  db_migrate.py  logging_setup.py  metrics.py  refresh_log.py  signals.py  (+1 more)
tests/: conftest.py  test_analysis_chart_data.py  test_analysis_engine_ohlc.py  test_analysis_levels.py  test_analysis_options_context.py  test_backtest_debug_cli.py  test_backtest_engine.py  test_backtest_export.py  test_base_rates.py  test_black_scholes.py  test_bulk_provider.py  test_config.py  test_cycles_drawdown.py  test_earnings_trends_query.py  test_earnings_trends_store.py  test_econ_events_importance.py  test_econ_events_sql.py  test_filters.py  test_fundamentals.py  test_fundamentals_extract.py  test_indicators.py  test_insider_cooldown.py  test_insider_store.py  test_insider_upsert_payload.py  test_jobs_nightly.py  test_logging_setup.py  test_macro_store.py  test_mcp_tools.py  test_metrics.py  test_notify_discord.py  test_notify_email.py  test_notify_router.py  test_perf_optimizations.py  test_proposals.py  test_provider_eodhd_exchange.py  test_provider_eodhd_resilience.py  test_provider_fred.py  test_refresh_job.py  test_refresh_zero_cost.py  test_regime_composite.py  (+20 more)
tools/: profile_backtest.py
(+199 files in other folders)
