[project]
name = "stockscan"
version = "0.1.0"
description = "Personal swing-trading scanner, backtester, and position manager"
authors = [{name = "Thomas"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Proprietary"}

dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",

    # Data + numerics
    "pandas>=2.2",
    "numpy>=2.0",

    # HTTP
    "httpx>=0.28",
    "tenacity>=9.0",

    # Database — SQLAlchemy Core + raw SQL migrations (custom runner; no Alembic)
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy>=2.0",

    # Config + CLI
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "typer>=0.13",
    "rich>=13.9",
]

[project.optional-dependencies]
broker = [
    # Phase 4: E*TRADE integration
    "pyetrade>=2.1",
]
charts = [
    # Optional: backtest report PDFs (Phase 2+). Add later if needed.
    "matplotlib>=3.9",
]
notify = [
    # Optional: rich Discord embeds. We can post webhooks with httpx alone.
    "discord-webhook>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
stockscan = "stockscan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockscan"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "N",                  # pep8-naming
    "SIM",                # simplify
    "RUF",                # ruff-specific
    "TCH",                # type-checking imports
]
ignore = [
    "E501",  # line length (ruff format handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["discord_webhook.*", "pyetrade.*"]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require live infrastructure (postgres, network)",
    "slow: tests that take more than a second",
]
